@@ -10,7 +10,6 @@ $cpan 'install Carp'
 $cpan 'install Inline'
 $cpan 'install Inline::C'
 $cpan 'install Devel::Symdump'
-$cpan 'install Switch'
 $cpan 'install Pod::Coverage'
 $cpan 'install Test::Pod::Coverage'
 $cpan 'install MP3::Info'
